--- a/python.ipynb
+++ b/python.ipynb
@@ -220,6 +220,34 @@
     "    # print(f\"List {idx}: {sublist}\")\n",
     "    print(idx,sublist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column = sl[0]\n",
+    "column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del sl[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sl"
+   ]
   }
  ],
  "metadata": {
