--- a/python.ipynb
+++ b/python.ipynb
@@ -138,6 +138,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ลิสต์ด้านบนที่มีสมาชิกทั้งหมด\n",
+    "all_items = ['เลขเคลม', 'เลขรับแจ้ง', 'เลขเซอเวย์', 'ประเภทเคลม', 'เลขกรมธรรม์', 'ทะเบียนรถ', 'ลักษณะเหตุ', 'สถานที่เกิดเหตุ', 'อำเภอที่เกิดเหตุ', 'จังหวัดที่เกิดเหตุ', 'อำเภอที่ออกตรวจสอบ', 'จังหวัดที่ออกตรวจสอบ', 'พิ้นที่สน.', 'ถูก/ผิด/ร่วม/ไม่พบ/ไม่ยุติ', 'พนักงานตรวจสอบ', 'เหตุผลการจ่ายงาน', 'เบอร์โทรศัพท์พนักงาน', 'ใช้เซอร์เวย์นอก', 'ศูนย์', '(คู่กรณี) มี/ไม่มี ประกัน/ไม่มีคู่กรณี', 'เขต (กท./ปม/ตจว)', 'ประเภทเคลม(ว.4/นัดหมาย)', 'ใน/นอก(เวลางาน)', 'นอกพื้นที่', 'ประเภทบริการ', 'ว.7', 'วันที่/เวลารับแจ้ง', 'วันที่/เวลาจ่ายงาน', 'วันที่/เวลารับงาน', 'วันที่/เวลาถึง ว.22', 'วันที่/เวลาเสร็จงาน ว.14', 'วันที่/เวลาส่งรายงาน', 'สรุปเวลา', 'การชน(รถ)', 'ทรัพย์สิน', 'ผู้บาดเจ็บ', 'รวม', 'จำนวนเงินเรียกร้อง', 'หมายเหตุ', 'ผู้รับแจ้ง', 'ผู้จ่ายงาน', 'ผู้ตรวจสอบงาน', 'วันที่/เวลาตรวจสอบ', 'สถานะงาน']\n",
+    "\n",
+    "# แบ่ง List ด้านบนเป็น 4 ลิสต์ ลิสละ 11 สมาชิก\n",
+    "split_lists = [all_items[i:i+11] for i in range(0, len(all_items), 11)]\n",
+    "\n",
+    "# ตรวจสอบผลลัพธ์\n",
+    "for idx, sublist in enumerate(split_lists, start=1):\n",
+    "    # print(f\"List {idx}: {sublist}\")\n",
+    "    print(idx)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import xml.etree.ElementTree as ET\n",
     "\n",
     "root = ET.parse('enquiry.xls')\n",
@@ -172,6 +190,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ap_.pop(0)  # ลบ 'Report enquiry :Startdate 2023-07-20 to 2023-07-20 Export time [2023-07-21 12:46:28]'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rows = root.findall(\"./ss:Worksheet/ss:Table/ss:Row\", namespace)\n",
     "print(len(rows))"
    ]
@@ -195,24 +222,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ลิสต์ด้านบนที่มีสมาชิกทั้งหมด\n",
-    "all_items = ['เลขเคลม', 'เลขรับแจ้ง', 'เลขเซอเวย์', 'ประเภทเคลม', 'เลขกรมธรรม์', 'ทะเบียนรถ', 'ลักษณะเหตุ', 'สถานที่เกิดเหตุ', 'อำเภอที่เกิดเหตุ', 'จังหวัดที่เกิดเหตุ', 'อำเภอที่ออกตรวจสอบ', 'จังหวัดที่ออกตรวจสอบ', 'พิ้นที่สน.', 'ถูก/ผิด/ร่วม/ไม่พบ/ไม่ยุติ', 'พนักงานตรวจสอบ', 'เหตุผลการจ่ายงาน', 'เบอร์โทรศัพท์พนักงาน', 'ใช้เซอร์เวย์นอก', 'ศูนย์', '(คู่กรณี) มี/ไม่มี ประกัน/ไม่มีคู่กรณี', 'เขต (กท./ปม/ตจว)', 'ประเภทเคลม(ว.4/นัดหมาย)', 'ใน/นอก(เวลางาน)', 'นอกพื้นที่', 'ประเภทบริการ', 'ว.7', 'วันที่/เวลารับแจ้ง', 'วันที่/เวลาจ่ายงาน', 'วันที่/เวลารับงาน', 'วันที่/เวลาถึง ว.22', 'วันที่/เวลาเสร็จงาน ว.14', 'วันที่/เวลาส่งรายงาน', 'สรุปเวลา', 'การชน(รถ)', 'ทรัพย์สิน', 'ผู้บาดเจ็บ', 'รวม', 'จำนวนเงินเรียกร้อง', 'หมายเหตุ', 'ผู้รับแจ้ง', 'ผู้จ่ายงาน', 'ผู้ตรวจสอบงาน', 'วันที่/เวลาตรวจสอบ', 'สถานะงาน']\n",
-    "\n",
-    "# แบ่ง List ด้านบนเป็น 4 ลิสต์ ลิสละ 11 สมาชิก\n",
-    "split_lists = [all_items[i:i+11] for i in range(0, len(all_items), 11)]\n",
-    "\n",
-    "# ตรวจสอบผลลัพธ์\n",
-    "for idx, sublist in enumerate(split_lists, start=1):\n",
-    "    # print(f\"List {idx}: {sublist}\")\n",
-    "    print(idx)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sl = [ap_[i:i+44] for i in range(0, len(ap_), 44)]\n",
     "\n",
     "# ตรวจสอบผลลัพธ์\n",
@@ -227,7 +236,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "column = sl[0]\n",
+    "sl[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column = sl[0] \n",
     "column"
    ]
   },
@@ -237,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del sl[0]"
+    "sl.pop(0)"
    ]
   },
   {
@@ -257,7 +275,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame(sl,columns=column)"
+    "pd.set_option('display.max_columns',None)\n",
+    "\n",
+    "df = pd.DataFrame(sl,columns=column)\n",
+    "df\n"
    ]
   },
   {
@@ -266,7 +287,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df[['เลขเคลม','เลขรับแจ้ง','เลขเซอเวย์','อำเภอที่เกิดเหตุ','จังหวัดที่เกิดเหตุ','อำเภอที่ออกตรวจสอบ','จังหวัดที่ออกตรวจสอบ','พนักงานตรวจสอบ','เหตุผลการจ่ายงาน','ใช้เซอร์เวย์นอก',\n",
+    "    'ประเภทเคลม(ว.4/นัดหมาย)','ใน/นอก(เวลางาน)','นอกพื้นที่','วันที่/เวลารับแจ้ง','วันที่/เวลาจ่ายงาน','วันที่/เวลารับงาน','วันที่/เวลาถึง ว.22','วันที่/เวลาเสร็จงาน ว.14','วันที่/เวลาส่งรายงาน','ผู้รับแจ้ง','ผู้จ่ายงาน','ผู้ตรวจสอบงาน','วันที่/เวลาตรวจสอบ','สถานะงาน']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df['ผู้จ่ายงาน']=='ปิยะณัฐ ขานไธสง']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[(df['ผู้รับแจ้ง']=='ปิยะณัฐ') & (df['ผู้จ่ายงาน']=='ปิยะณัฐ ขานไธสง')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot\n",
+    "\n",
+    "df.plot(kind='bar',x='ผู้รับแจ้ง',y='เลขเคลม')\n"
    ]
   }
  ],
